--- a/app/src/main/res/layout/fragment_launch_quiz.xml
+++ b/app/src/main/res/layout/fragment_launch_quiz.xml
@@ -123,7 +123,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="@string/description_load_wikipedia_data"
-        app:layout_constraintEnd_toStartOf="@+id/launchTimedQuizButton"
+        app:layout_constraintEnd_toStartOf="@+id/loadWikiDataButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleLoadDB" />
 
@@ -141,7 +141,7 @@
         app:layout_constraintTop_toTopOf="@+id/launchGuideline1" />
 
     <Button
-        android:id="@+id/launchTimedQuizButton"
+        android:id="@+id/loadWikiDataButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
